Dodanie wyszukiwanie po dacie, żeby uzupełnianie było łatwiejsze

--- a/views/partials/territorySearch.ejs
+++ b/views/partials/territorySearch.ejs
@@ -19,6 +19,9 @@
                         <a class="dropdown-item" id="preacher">Głosiciel</a>
                     </li>
                     <li>
+                        <a class="dropdown-item" id="date" href="/territories/dateChanges?date=<%= new Date().toISOString().slice(0, 10) %>">Data pobrania/opracowania</a>
+                    </li>
+                    <li>
                         <a class="dropdown-item" id="kind">Rodzaj terenu</a>
                     </li>
                     <li>
