Dodane mapki w historii terenu i wolnych terenach

--- a/views/congregations/edit.ejs
+++ b/views/congregations/edit.ejs
@@ -48,6 +48,16 @@
                                             </label>
                                             
                                         </div>
+
+                                        <div class="form-floating mb-3" id="mainCityDiv">
+                       
+                                            <input type="text" name="congregation[mainCity]" id="mainCity" autocomplete="off" placeholder="mainCity" class="form-control" required>
+                                            <label for="mainCity" class="username" id="mainCityLabel">
+                                               Główne miasto zboru np. Głogów, Polska
+                                                
+                                            </label>
+                                            
+                                        </div>
                                     
                                     <input type="submit" value="Edytuj zbór" class="btn btn-success button btn-green" id="send">
                             
