--- a/views/congregations/new.ejs
+++ b/views/congregations/new.ejs
@@ -49,6 +49,15 @@
                                             
                                         </div>
                                         
+                                        <div class="form-floating mb-3" id="mainCityDiv">
+                       
+                                            <input type="text" name="mainCity" id="mainCity" autocomplete="off" placeholder="mainCity" class="form-control" required>
+                                            <label for="mainCity" class="username" id="mainCityLabel">
+                                               Główne miasto zboru np. Głogów, Polska
+                                                
+                                            </label>
+                                            
+                                        </div>
                                         
                                         <div class="form-floating mb-3">
                            
