--- a/public/style.css
+++ b/public/style.css
@@ -48,7 +48,7 @@ body {
 }
 
 .card {
-    margin: 10px 0;
+    margin-bottom: 90px;
 }
 .card.city {
     background: #f6edd9;
@@ -163,5 +163,8 @@ input[type=search]::placeholder {
 
     .my_nav-link {
         font-size: 17px;
+    }
+    .card {
+        margin-bottom: 20px;
     }
 }
