--- a/views/territories/new.ejs
+++ b/views/territories/new.ejs
@@ -88,6 +88,15 @@
                                 </label>
                                 
                             </div>
+                            <div class="form-floating mb-3" id="locationDiv">
+                       
+                                <input type="text" name="location" id="location" autocomplete="off" placeholder="location" class="form-control" required>
+                                <label for="location" class="username" id="locationLabel">
+                                   Pełna lokalizacja np. Mechaniczna 30, Głogów
+                                    
+                                </label>
+                                
+                            </div>
                             
                             <div class="form-floating mb-3">
                        
