Poprawki błędów odnośnie ostatniej aktuaktualizacji

--- a/views/congregations/edit.ejs
+++ b/views/congregations/edit.ejs
@@ -51,7 +51,7 @@
 
                                         <div class="form-floating mb-3" id="mainCityDiv">
                        
-                                            <input type="text" name="congregation[mainCity]" id="mainCity" autocomplete="off" placeholder="mainCity" class="form-control" required>
+                                            <input type="text" name="congregation[mainCity]" id="mainCity" autocomplete="off" value="<%= congregation.mainCity %>" placeholder="mainCity" class="form-control" required>
                                             <label for="mainCity" class="username" id="mainCityLabel">
                                                Główne miasto zboru np. Głogów, Polska
                                                 
