--- a/views/territories/edit.ejs
+++ b/views/territories/edit.ejs
@@ -92,7 +92,7 @@
                             </div>
                             <div class="form-floating mb-3" id="locationDiv">
                        
-                                <input type="text" name="territory[location]" id="location" autocomplete="off" placeholder="location" class="form-control" required>
+                                <input type="text" name="territory[location]" id="location" autocomplete="off" value="<%= territory.location %>" placeholder="location" class="form-control" required>
                                 <label for="location" class="username" id="locationLabel">
                                    Pełna lokalizacja np. Mechaniczna 30, Głogów
                                     
