--- a/views/congregations/show.ejs
+++ b/views/congregations/show.ejs
@@ -7,26 +7,22 @@
             </div>
         </div>
 
-            <div class="row justify-content-between info">
-                
-                    <div class="col-lg-6">
-                        Email sługi terenu
+            <div class="row info">
+                    <div class="col-lg-12 congregation__info">
+                        <p>Email sługi terenu</p>
+                        <p class="text-lg-end text-sm-center"><strong><%= congregation.territoryServantEmail %></strong></p>
+
                     </div>
-                    <div class="col-lg-6 text-end">
-                        <strong><%= congregation.territoryServantEmail %></strong>
+                    <div class="col-lg-12 congregation__info">
+                        <p>Email nadzorcy służby</p>
+                        <p class="text-lg-end text-sm-center"><strong><%= congregation.ministryOverseerEmail %></strong></p>
                     </div>
-                    <div class="col-lg-6">
-                        Email nadzorcy służby
-                    </div>
-                    <div class="col-lg-6 text-end">
-                        <strong><%= congregation.ministryOverseerEmail %></strong>
-                    </div>
-                    <div class="col-lg-6">
-                        Główne miasto zboru
-                    </div>
-                    <div class="col-lg-6 text-end">
-                        <strong><%= congregation.mainCity %></strong>
-                    </div>
+                    
+                        <div class="col-lg-12 congregation__info">
+                            <p>Główne miasto zboru</p>
+                            <p class="text-lg-end text-sm-center"><strong><%= congregation.mainCity %></strong></p>
+                        </div>
+                    
 
                     <% if (congregation.mainCity) { %>
                         <p id="lat" style="display: none;"><%= congregation.mainCityLatitude %></p>
