--- a/views/congregations/show.ejs
+++ b/views/congregations/show.ejs
@@ -7,7 +7,7 @@
             </div>
         </div>
 
-            <div class="row info">
+            <div class="row info" style="padding: 0 15px;">
                     <div class="col-lg-12 congregation__info">
                         <p>Email sługi terenu</p>
                         <p class="text-lg-end text-sm-center"><strong><%= congregation.territoryServantEmail %></strong></p>
